scraper starting to work; still needs to not put double titles; css issue with spacing

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,12 +14,17 @@ body {
 	background-image: url("../img/newspaper1.jpg");
 }
 
+.container {
+    overflow: auto;
+}
+
 .container .row {
 	margin: 0;
 }
 
 h3 {
 	font-family: 'Fjalla One', sans-serif;
+    font-size: 25px;
 }
 
 html, body, .container {
